src/test/ui/enum-discriminant/issue-70453-generics-in-discr-ice-2.stderr
error: generic parameters may not be used in const operations
  --> $DIR/issue-70453-generics-in-discr-ice-2.rs:9:35
   |
LL |     Some(T) = std::mem::size_of::<T>(),
   |                                   ^ cannot perform const operation using `T`
   |
   = note: type parameters may not be used in const expressions
   = help: use `#![feature(const_generics)]` and `#![feature(const_evaluatable_checked)]` to allow generic const expressions

error: aborting due to previous error

